[gd_scene load_steps=8 format=3 uid="uid://b38c1t0ecm1ir"]

[ext_resource type="Script" path="res://Main.gd" id="1_qnn4b"]
[ext_resource type="Texture2D" uid="uid://c4ol05pdonqlt" path="res://sprites/PortaAgain2.png" id="2_n0hod"]
[ext_resource type="AudioStream" uid="uid://r70kax5xvd72" path="res://audio/barulho-de-porta.wav" id="3_r7o1r"]
[ext_resource type="PackedScene" uid="uid://c65h0n77gjvkh" path="res://options_button.tscn" id="4_x702i"]

[sub_resource type="Animation" id="Animation_okaaw"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(576, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1.3, 1.3)]
}

[sub_resource type="Animation" id="Animation_6soyv"]
resource_name = "pressed"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(576, 1121)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(10, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esprq"]
_data = {
"idle": SubResource("Animation_okaaw"),
"pressed": SubResource("Animation_6soyv")
}

[node name="MainScene" type="Node2D"]
script = ExtResource("1_qnn4b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_n0hod")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Olhar" type="Button" parent="."]
offset_left = 777.0
offset_top = 229.0
offset_right = 879.0
offset_bottom = 283.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 8
text = "Olhar pelo 
olho m√°gico"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r7o1r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_esprq")
}

[node name="options_button" parent="." instance=ExtResource("4_x702i")]
offset_left = 1043.0
offset_right = 1143.0

[connection signal="pressed" from="Olhar" to="." method="_on_olhar_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
